--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -94,6 +94,7 @@
       width: 3rem;
       height: 3rem;
       .icon {
+        transition: 0.3s ease-in all;
         position: relative;
         bottom: 0.1rem;
         font-size: 1.3rem;
@@ -106,6 +107,9 @@
       background-color: rgb(238, 238, 238);
       transition: 0.3s ease-in all;
       &:hover {
+        .icon {
+          color: rgb(241, 17, 54);
+        }
         background-color: rgb(247, 247, 247);
       }
     }
@@ -122,20 +126,24 @@
 
 // main page title
 .main {
-  padding: 1rem 5rem;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  
   .title {
-      h1 {
+    position: relative;
+    text-align: left;
+      div {
         margin: 0;
         padding: 0;
-        line-height: 1.1;
-        text-align: left;
-        font-size: calc(12vw + 1rem)
+        line-height: 1.05;
+        font-size: calc(10vw + 2rem)
       }
-  }
-  img {
-    width: 60%;
-    position: fixed;
-    top: 10rem;
-    right: 0rem;
+      img {
+        width: 70%;
+        position: absolute;
+        top: calc(9vw + 0.5rem);
+        left: calc(25vw + 0.5rem);
+      }
   }
 }
