--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Manrope:wght@200;300;400;500;600;700;800&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --white: #fffdf8;
@@ -50,10 +50,14 @@
     --themeFooterBgColor: var(--light3);
     --themeFooterInputColor: var(--white);
 
-    --themeScrollBar: var(--light6);
+    --themeScrollBarColor: var(--light6);
 
     --themeLikeColor: var(--red);
     --themeRecommendColor: var(--blue);
+
+
+    --themeIconColor: var(--light3);
+    --themeIconBgColor: var(--midnightPurple);
 }
 
 @keyframes scaleUp {
@@ -75,8 +79,11 @@
   }
 }
 
+
 .App {
-  // font-family: "Montserrat", sans-serif;
+  font-family: 'IBM Plex Sans KR', sans-serif;
+  font-family: 'Manrope', sans-serif;
+  // font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   text-align: center;
 }
@@ -226,7 +233,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--themeScrollBar);
+  background: var(--themeScrollBarColor);
   -webkit-border-radius: 1ex;
 }
 
@@ -312,8 +319,9 @@ li:last-of-type {
 
 
 // Best5
-#best5 {
-  margin: 4rem 4rem;
+#best5, #random {
+  padding-top: 3rem;
+  margin: 2rem 4rem;
 }
 
 
@@ -324,11 +332,75 @@ h3.title {
   background-color: var(--themeTitleBgColor);
   border-radius: 2rem;
   padding: 0.8rem 2rem;
+  margin-bottom: 2rem;
+
   span {
     margin-left: 0.4rem;
   }
-  margin-bottom: 2rem;
+
+  .icon {
+    margin-left: -0.4rem;
+  }
 }
-.best-icon {
-  margin-left: -0.4rem;
+
+
+
+// Random
+
+
+#random {
+  .container {
+    max-width: 60rem;
+  }
+  .button {
+    position: relative;
+    background-color: var(--themeIconBgColor);
+    width: 6rem;
+    height: 6rem;
+    border-radius: 4rem;
+    display: inline-block;
+    margin: 1rem;
+
+    .icon {
+      color: var(--themeIconColor);
+      position: absolute;
+      font-size: 3rem;
+      top: 1.5rem;
+      left: 1.5rem;
+      transition: 0.4s all;
+    }
+  }
+  .memoji2 {
+    position: absolute;
+    width: 90%;
+    max-width: 18rem;
+    left: 0rem;
+    top: 1.5rem;
+  }
 }
+
+.retry-btn {
+  &:hover {
+    .icon {
+      transform: rotate(360deg);
+    }
+  }
+}
+
+.like-btn {
+    &:hover {
+      .icon {
+        color: var(--themeLikeColor) !important;
+      }
+    }
+}
+
+
+// flex 중앙 정렬
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+
