--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -219,9 +219,7 @@ body {
 // main page title
 .main {
   background-color: white;
-  margin: 0rem 2rem ;
-  border-radius: 0rem 0rem var(--boxBorderRadius) var(--boxBorderRadius);
-  padding: 2rem 1rem 6rem 1rem;
+
   display: flex;
   justify-content: center;
   
@@ -386,10 +384,11 @@ li:last-of-type {
         width: 100%;
 
           textarea {
+              font-weight: 600;
               border: none;
               border-radius: 1rem;
               width: 100%;
-              font-size: 2rem;
+              font-size: 1.7rem;
               padding: 1rem;
               resize: none;
             }
@@ -442,6 +441,11 @@ h3.title {
 
 
 #random {
+  p {
+    color: var(--white);
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+  }
   h3 {
     color: var(--green);
   }
@@ -505,5 +509,59 @@ h3.title {
 
 
 textarea::placeholder {
-  font-family: ClimateCrisisKR-1979;
+  //font-family: ClimateCrisisKR-1979;
+}
+
+#login, #join {
+  background-color: var(--white);
+  form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: calc(20vw + 15rem);
+    h2 {
+      font-family: gt-flexa;
+      margin-bottom: 1rem;
+    }
+    input, button {
+      font-weight: 700;
+      margin: 0.3rem;
+      padding: 0.5rem 1rem;
+      border-radius: 2rem;
+      border: 1px solid var(--dark);
+    }
+    button {
+      border: none;
+      height: 3rem;
+    }
+    .login {
+      margin-top: 1rem;
+      background-color: var(--green);
+    }
+    .join {
+      background-color: var(--black);
+      color: var(--white)
+    }
+
+    .social-login {
+      margin-top: 1rem;
+    }
+
+    img {
+      width: 3rem;
+    }
+  }
+}
+
+#join {
+  button {
+    background-color: var(--black) !important;
+    color: var(--white);
+  }
+}
+
+.first {
+      border-radius: 0rem 0rem var(--boxBorderRadius) var(--boxBorderRadius);
+        padding: 2rem 1rem 6rem 1rem;
+        margin: 0rem 2rem;
 }
