회원가입 기능추가

--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -24,8 +24,8 @@
     --light:#f2f2f6;
     --green: #31df7f;
     --dark: #727272;
-    --black: #191919;
-    --blue: #1e83ff;
+    --black: #282832;
+    --blue: #288cff;
   
 
     --lightGreen: rgb(166, 247, 204);
@@ -469,7 +469,7 @@ h3.title {
       position: absolute;
       font-size: 3rem;
       top: 0.8rem;
-      left: 1.5rem;
+      left: 1.4rem;
       transition: 0.4s all;
     }
   }
