로그아웃 기능 추가

--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -192,8 +192,11 @@ body {
         font-size: 1.3rem;
       }
     }
-    .login {
+    .login, .logout {
       width: 7rem;
+    }
+    .logout {
+      background-color: var(--red) !important;
     }
     .nav-link {
       background-color: var(--themeSideNav);
