--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -140,7 +140,7 @@ body {
 
 // navbar style
 #navbar {
-  padding: 1rem 2rem;
+  padding: 1rem 2rem !important;
   background-color: var(--white) !important;
   --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 1);
 
@@ -545,6 +545,9 @@ textarea::placeholder {
       background-color: var(--black);
       color: var(--white)
     }
+    p {
+      margin-top: 0.8rem;
+    }
 
     .social-login {
       margin-top: 1rem;
@@ -564,7 +567,139 @@ textarea::placeholder {
 }
 
 .first {
-      border-radius: 0rem 0rem var(--boxBorderRadius) var(--boxBorderRadius);
-        padding: 2rem 1rem 6rem 1rem;
-        margin: 0rem 2rem;
+  background-color: var(--white);
+  border-radius: 0rem 0rem var(--boxBorderRadius) var(--boxBorderRadius);
+  padding: 2rem 1rem 6rem 1rem;
+  margin: 0rem 2rem;
+}
+
+#place {
+  padding: 2rem 7rem;
+  .title {
+    font-size: 2.2rem;
+    font-family: ClimateCrisisKR-1979;
+    margin-bottom: 2rem;
+  }
+  .row {
+    --bs-gutter-x: 0 !important;
+  }
+  .p-right {
+    padding-right: 0.5rem;
+  }
+
+  .p-left {
+    padding-left: 0.5rem;
+  }
+
+  .col-box {
+    margin-bottom: 1rem;
+  }
+  .menu {
+    // font-family: 'apple sd gothic neo', san;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 2rem;
+    border: 1px solid var(--dark);
+    padding: 2.5rem;
+    h3 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 0.8rem;
+      // font-family: ClimateCrisisKR-1979;
+    }
+    .row {
+      align-items: center;
+      margin-bottom: 0.5rem;
+    }
+    .menu-name {
+      overflow: hidden;
+      white-space: nowrap;
+      font-size: 1.3rem;
+    }
+    .menu-price {
+      font-size: 1.1rem;
+    }
+  }
+  .img {
+    border-radius: 2rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .icons {
+    margin: 3rem auto 1rem;
+    max-width: 28rem;
+      .col {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+          margin-top: 0.5rem;
+          font-size: 1.3rem;
+        }
+
+        .icon {
+            position: relative;
+            background-color: var(--green);
+            border-radius: 7rem;
+            width: 6rem;
+            height: 6rem;
+            font-size: 3rem;
+
+            .recommend-icon {
+              position: absolute;
+              top: 1.5rem;
+              left: 1.5rem;
+            }
+            .unrecommend-icon {
+              position: absolute;
+              top: 1.7rem;
+              left: 1.5rem;
+            }
+            .like-icon {
+              position: absolute;
+              top: 1.65rem;
+              left: 1.5rem;
+            }
+          }
+      }
+  }
+
+}
+
+
+@media all and (max-width: 768px) {
+  #place {
+    padding: 2rem 4rem !important;
+  }
+
+  .p-right,
+  .p-left {
+    padding: 0 !important;
+  }
+
+  .icons {
+    width: 90%;
+    .icon {
+      width: 4.5rem !important;
+      height: 4.5rem !important;
+      font-size: 2rem !important;
+
+      .recommend-icon {
+        top: 1.25rem !important;
+        left: 1.3rem !important;
+      }
+
+      .unrecommend-icon {
+        top: 1.5rem !important;
+        left: 1.3rem !important;
+      }
+
+      .like-icon {
+        top: 1.4rem !important;
+        left: 1.25rem !important;
+      }
+    }
+  }
 }
