db 데이터 반영

--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -304,6 +304,7 @@ li:last-of-type {
   border: .7rem solid var(--white);
   border-radius: 1.3rem;
   .card-img {
+    height: 19rem;
     overflow: hidden;
     border-top-right-radius: 1.3rem;
     border-top-left-radius: 1.3rem;
@@ -318,8 +319,10 @@ li:last-of-type {
       transition: transform 0.3s;
       border-top-right-radius: 1.3rem;
       border-top-left-radius: 1.3rem;
+      height: 100%;
       width: 100%;
-    }
+      object-fit: cover;
+      }
   }
 
 }
@@ -872,5 +875,26 @@ textarea::placeholder {
   .icon {
     top: .15rem;
     position: relative;
+  }
+}
+
+
+.comment-input {
+  input[type=text] {
+    width: 78%;
+    font-weight: 700;
+    margin-right: 2%;
+    padding: .5rem 1rem;
+    border-radius: 2rem;
+    border: 1px solid var(--dark);
+  }
+  input[type=submit] {
+    background-color: var(--green);
+    border: 1px solid var(--green);
+    width: 20%;
+    font-weight: 700;
+    padding: .5rem 1rem;
+    border-radius: 2rem;
+    border: none;
   }
 }
