--- a/st-what-to-eat/src/App.css
+++ b/st-what-to-eat/src/App.css
@@ -765,35 +765,35 @@ h3.title span {
   border: none;
 }
 
-#category h3 {
+#category h3, #mypage h3 {
   margin-bottom: 2rem;
 }
-#category .filter-box .box {
+#category .filter-box .box, #mypage .filter-box .box {
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
 }
-#category .filter-box .box:hover {
+#category .filter-box .box:hover, #mypage .filter-box .box:hover {
   background-color: var(--green);
   color: black;
 }
-#category .selected {
+#category .selected, #mypage .selected {
   background-color: var(--green);
   color: black;
 }
-#category .place-card {
+#category .place-card, #mypage .place-card {
   width: 100%;
 }
-#category .places {
+#category .places, #mypage .places {
   padding: 0 3rem;
 }
-#category a {
+#category a, #mypage a {
   text-decoration: none;
 }
-#category .pagination-wrapper {
+#category .pagination-wrapper, #mypage .pagination-wrapper {
   text-align: center;
   margin: 40px 0;
 }
-#category .pagination {
+#category .pagination, #mypage .pagination {
   display: inline-block;
   margin-top: 1rem;
   padding: 0 1.5rem;
@@ -801,13 +801,13 @@ h3.title span {
   background-color: var(--black);
 }
 @media only screen and (max-width: 1199px) {
-  #category .pagination {
+  #category .pagination, #mypage .pagination {
     margin-top: 50px;
     padding: 0 10px;
     border-radius: 25px;
   }
 }
-#category .page-numbers {
+#category .page-numbers, #mypage .page-numbers {
   display: block;
   padding: 0 25px;
   float: left;
@@ -816,47 +816,48 @@ h3.title span {
   letter-spacing: 0.1em;
   line-height: 3.5rem;
 }
-#category .page-numbers:hover, #category .page-numbers.current {
+#category .page-numbers:hover, #category .page-numbers.current, #mypage .page-numbers:hover, #mypage .page-numbers.current {
   background-color: var(--green);
   color: #fff;
 }
-#category .page-numbers.prev:hover, #category .page-numbers.next:hover {
+#category .page-numbers.prev:hover, #category .page-numbers.next:hover, #mypage .page-numbers.prev:hover, #mypage .page-numbers.next:hover {
   background-color: transparent;
   color: var(--green);
 }
 @media only screen and (max-width: 1199px) {
-  #category .page-numbers {
+  #category .page-numbers, #mypage .page-numbers {
     padding: 0 15px;
     line-height: 2.5rem;
   }
 }
 @media only screen and (min-width: 120px) and (max-width: 1024px) {
-  #category .page-numbers {
+  #category .page-numbers, #mypage .page-numbers {
     padding: 0 14px;
     display: none;
   }
-  #category .page-numbers:nth-of-type(2) {
+  #category .page-numbers:nth-of-type(2), #mypage .page-numbers:nth-of-type(2) {
     position: relative;
     padding-right: 50px;
   }
-  #category .page-numbers:nth-of-type(2)::after {
+  #category .page-numbers:nth-of-type(2)::after, #mypage .page-numbers:nth-of-type(2)::after {
     content: "...";
     position: absolute;
     font-size: 25px;
     top: 0;
     left: 45px;
   }
-  #category .page-numbers:nth-child(-n+3), #category .page-numbers:nth-last-child(-n+3) {
+  #category .page-numbers:nth-child(-n+3), #category .page-numbers:nth-last-child(-n+3), #mypage .page-numbers:nth-child(-n+3), #mypage .page-numbers:nth-last-child(-n+3) {
     display: block;
   }
-  #category .page-numbers:nth-last-child(-n+4) {
+  #category .page-numbers:nth-last-child(-n+4), #mypage .page-numbers:nth-last-child(-n+4) {
     padding-right: 14px;
   }
-  #category .page-numbers:nth-last-child(-n+4)::after {
+  #category .page-numbers:nth-last-child(-n+4)::after, #mypage .page-numbers:nth-last-child(-n+4)::after {
     content: none;
   }
 }
 
-.filter {
+.title-pd {
+  text-align: start;
   padding: 0rem 4rem 1em;
 }/*# sourceMappingURL=App.css.map */
