네비게이트 페이지 버그 수정

--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -212,6 +212,10 @@ body {
     }
 }
 
+.br {
+    border-radius: var(--boxBorderRadius) !important;
+}
+
 // img 슬라이더
 .img-slider {
     position: relative;
